--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "last 1 Chrome version"
+  ],
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router": "^5.2.0"
+    "react-is": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.1"
   }
 }
